--- a/AewsomeTest/src/app/app.component.html
+++ b/AewsomeTest/src/app/app.component.html
@@ -340,7 +340,7 @@
   </div> -->
 
   <!-- Resources -->
-  <h2>Resources xxxxx</h2>
+  <h2>Resources 121312312</h2>
   <p>Here are some links to help you get started:</p>
 
   <div class="card-container">
